# NYCPublicTransportProject

./: .gitignore  README.md  pyproject.toml  random_points_example.csv  subway_graph.gml  subway_graph_weekday_weekend.gml  subway_graph_with_weights.gml
results/: edge_centrality_component_1.csv  edge_centrality_component_2.csv  node_centrality_component_1.csv  node_centrality_component_2.csv  proximity_average_distance_component_1.csv  proximity_average_distance_component_2.csv  proximity_density_component_1.csv  proximity_density_component_2.csv  robustness_efficiency_component_1.csv  robustness_efficiency_component_2.csv  robustness_reachability_component_1.csv  robustness_reachability_component_2.csv
src/: citibike_analysis.ipynb  citibike_processor.py  find_hubs.py  graph_creation.ipynb  maps.ipynb  publicTransport_monthAgg.ipynb  simulation.ipynb  simulations.py  station_utilities.py  stats.ipynb  subway_graph_bidirectional.gml  subway_graph_weekday_weekend_bidirectional.gml  subway_inflow.ipynb  transportation_graph.ipynb  visualize_citibike_map.py
src/simulation_results/: Astoria_Park_(North_Roosevelt_Island_Coast).csv  Central_Park_Entrance-Columbus_Monument.csv  Little_Italy-Chinatown.csv  North_Queens-Jackson_Heights.csv  Red_Hook_(Brooklyn_Bay_Area).csv  The_Bronx_(Residential).csv  West_Queens-North_Brooklyn.csv  citibike.csv  subway.csv
src/simulation_results/baseline/: Astoria_Park_(North_Roosevelt_Island_Coast).csv  Central_Park_Entrance-Columbus_Monument.csv  Little_Italy-Chinatown.csv  North_Queens-Jackson_Heights.csv  The_Bronx_(Residential).csv  (+2 more)
(+7 files in other folders)
