[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Person-Maink", email = "mamayankt.2002@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scipy>=1.13.1",
]

[project.scripts]
project = "project:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
