[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Person-Maink", email = "mamayankt.2002@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "contextily>=1.6.2",
    "folium>=0.20.0",
    "geopandas>=1.0.1",
    "googlemaps>=4.10.0",
    "haversine>=2.9.0",
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pydeck>=0.9.1",
    "python-dotenv>=1.1.1",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
]

[project.scripts]
project = "project:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
